On home page accordion name header changed for modeling accordion and also added a note about Part Reviewer... I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="mic_kugla_ventila">
                   <button class="btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_mic_kugla_ventila" aria-expanded="true" aria-controls="collapse_mic_kugla_ventila">
-                    Моделирање и израда цртежа:
+                    Моделирање:
                   </button>
                 </h2>
                 <div id="collapse_mic_kugla_ventila" class="accordion-collapse collapse" aria-labelledby="mic_kugla_ventila" data-bs-parent="#modeliranje_kugla_ventila">
@@ -112,7 +112,7 @@
                         <button class="nav-link active" id="Kratki_podsetnik-tab" data-bs-toggle="tab" data-bs-target="#Kratki_podsetnik" type="button" role="tab" aria-controls="Kratki_podsetnik" aria-selected="true">Кратки подсетник</button>
                       </li>
                       <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="modeliranje_i_crtezi-tab" data-bs-toggle="tab" data-bs-target="#modeliranje_i_crtezi" type="button" role="tab" aria-controls="modeliranje_i_crtezi" aria-selected="false">Моделирање и анимација</button>
+                        <button class="nav-link" id="modeliranje_i_crtezi-tab" data-bs-toggle="tab" data-bs-target="#modeliranje_i_crtezi" type="button" role="tab" aria-controls="modeliranje_i_crtezi" aria-selected="false">Команда: "Part Reviewer"</button>
                       </li>
                     </ul>
                     <div class="tab-content" id="kugla_ventil_TabContentx1">
