On modeling accordion of the home page exploded view and exploded line sketch directions added... I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                       <li class="nav-item" role="presentation">
                         <button class="nav-link" id="modeliranje_i_crtezi-tab" data-bs-toggle="tab" data-bs-target="#modeliranje_i_crtezi" type="button" role="tab" aria-controls="modeliranje_i_crtezi" aria-selected="false">Команда: "Part Reviewer"</button>
                       </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="rastavljeni_pogled_sklopa-tab" data-bs-toggle="tab" data-bs-target="#rastavljeni_pogled_sklopa" type="button" role="tab" aria-controls="rastavljeni_pogled_sklopa" aria-selected="false">Растављени поглед склопа</button>
+                      </li>
+                      <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="uputstvo_za_sklapanje_rasklapanje-tab" data-bs-toggle="tab" data-bs-target="#uputstvo_za_sklapanje_rasklapanje" type="button" role="tab" aria-controls="uputstvo_za_sklapanje_rasklapanje" aria-selected="false">Упутство за склапање/расклапање</button>
+                      </li>
                     </ul>
                     <div class="tab-content" id="kugla_ventil_TabContentx1">
                       <div class="tab-pane show active" id="Kratki_podsetnik" role="tabpanel" aria-labelledby="Kratki_podsetnik-tab">
@@ -183,6 +189,16 @@
                       <div class="tab-pane" id="modeliranje_i_crtezi" role="tabpanel" aria-labelledby="modeliranje_i_crtezi-tab">
                         <div class="card ratio ratio-16x9">
                           <iframe width="560" height="315" src="https://www.youtube.com/embed/SdUVvq2qYsc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                      </div>
+                      <div class="tab-pane" id="rastavljeni_pogled_sklopa" role="tabpanel" aria-labelledby="rastavljeni_pogled_sklopa-tab">
+                        <div class="card ratio ratio-16x9">
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/wL-tFp-EKmM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                      </div>
+                      <div class="tab-pane" id="uputstvo_za_sklapanje_rasklapanje" role="tabpanel" aria-labelledby="uputstvo_za_sklapanje_rasklapanje-tab">
+                        <div class="card ratio ratio-16x9">
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/2CH_uPEc62w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                       </div>
                     </div>
