A page about weldment modeling created. All links to this page and from this page added and enabled. All pictures and drawings added, also links to YouTube tutorials added and enabled. I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link active" aria-current="page" href="#">Моделирање вентила</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#">Моделирање цеви</a>
+              <a class="nav-link" href="weldment.html">Моделирање цеви</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" aria-disabled="true">Моделирање кућишта</a>
