--- a/weldment.html
+++ b/weldment.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Моделирање вентила</a>
+              <a class="nav-link" aria-current="page" href="index.html">Моделирање вентила</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Моделирање цеви</a>
