Web pages for box and template modeling have been created. Links to this and from these pages have been added and enabled. Contents on pages and links to YouTube tutorials also added and enabled. I love my son Aleksej Ivkovic Cvijic very very much. I miss you to the farthest star and beyond unponderable in infinity...

--- a/weldment.html
+++ b/weldment.html
@@ -33,10 +33,10 @@
               <a class="nav-link active" href="#">Моделирање цеви</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Моделирање кућишта</a>
+              <a class="nav-link" href="kuciste.html">Моделирање кућишта</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled" href="#" aria-disabled="true">Склопни цртеж и израда шаблона</a>
+              <a class="nav-link" href="sklopni_crtez_i_sablon.html">Склопни цртеж и израда шаблона</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
