--- a/sklopni_crtez_i_sablon.html
+++ b/sklopni_crtez_i_sablon.html
@@ -176,7 +176,7 @@
                       </div>
                       <div class="tab-pane" id="Trailing_zeroes_remove" role="tabpanel" aria-labelledby="Trailing_zeroes_remove-tab">
                         <div class="card ratio ratio-16x9">
-                          <iframe width="560" height="315" src="https://www.youtube.com/embed/TYeaDKXomzM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                          <iframe width="560" height="315" src="https://www.youtube.com/embed/ZMUJ3O3WLxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                       </div>
                     </div>
