--- a/weldment.html
+++ b/weldment.html
@@ -50,7 +50,7 @@
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr2/">Моделирање помоћу рачунара 2</a>
                 </li>
                 <li>
-                  <a class="dropdown-item disabled" href="#" tabindex="-1" aria-disabled="true">Моделирање и симулација пом. рач.</a>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r/">Моделирање и симулација пом. рач.</a>
                 </li>
                 </li>
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_izborni/">Моделирање и симулација пом. рач. - изб. пр.</a>
