--- a/sklopni_crtez_i_sablon.html
+++ b/sklopni_crtez_i_sablon.html
@@ -50,7 +50,10 @@
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/mpr2/">Моделирање помоћу рачунара 2</a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r/">Моделирање и симулација пом. рач.</a>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r_2022/">Моделирање и сим. пом. рач. шк. 2022/23. год.</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_i_simulacija_p_r/">Моделирање и симулација пом. рач. шк. 2021/22. год.</a>
                 </li>
                 </li>
                   <a class="dropdown-item" href="https://slobodan-iv.github.io/modeliranje_izborni/">Моделирање и симулација пом. рач. - изб. пр.</a>
@@ -68,7 +71,7 @@
     <div class="container">
       <!-- Content here -->
       <div>
-        <h1>Склопни цртеж и израда шаблона</h1>
+        <h1>Склопни цртеж и израда шаблона шк. 2021/22. год.</h1>
         <div class="row justify-content-center">
           <div class="col-12 col-sm-12 col-md-11 col-lg-10">
             <div class="accordion" id="izrada_sklopnih_crteza_i_sablona">
